--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#Image Store URL
+imageUrl=http://localhost:8080/
